--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <title>Travel Agency</title>
 </head>
 <body>
-    <p>Step 1.</p>
+    <!--We'll be adding more later-->
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eum iure rerum beatae quos officiis laboriosam rem sit exercitationem inventore repellendus deserunt, a est ut earum voluptatum, consequuntur excepturi ad.</p>
 </body>
 </html>
