Added heading, tagline and paragraph

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <!--We'll be adding more later-->
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eum iure rerum beatae quos officiis laboriosam rem sit exercitationem inventore repellendus deserunt, a est ut earum voluptatum, consequuntur excepturi ad.</p>
+    <h1>Travel Agency</h1>
+    <hr>
+    <h4>Terrific Travel at Tremendous Discounts</h4>
+    <p>Our Travel Agents will get you where you want to go, when you want to go, for the price you want to pay!</p>
 </body>
 </html>
