added classes, ids, an image and lists

--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
     <h1>Travel Agency</h1>
     <hr>
     <h4>Terrific Travel at Tremendous Discounts</h4>
-    <p>Our Travel Agents will get you where you want to go, when you want to go, for the price you want to pay!</p>
+    <img class="feature-image" src="lights.jpg" alt="Northern Lights aka Aurora">
+    <a href="https://www.space.com/15139-northern-lights-auroras-earth-facts-sdcmp.html">More info on The Northen Lights</a>
+    <p id="motivation">Our Travel Agents will get you where you want to go, when you want to go, for the price you want to pay!</p>
+    <h5>Things less cool than Aurora Borealis</h5>
+    <ul>
+        <li>The Effeil Tower</li>
+        <li>Big Ben</li>
+        <li>The Empire State</li>
+        <li>Castle Hill</li>
+    </ul>
+    <h5>Things to do when you see the lights</h5>
+    <ol>
+        <li>Take a picture, you're never coming back to this cold voluntarily</li>
+        <li>Search for Toothless and his descendants</li>
+        <li>Find the gate to Vallhalla</li>
+    </ol>
 </body>
 </html>
