--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <h1>Travel Agency</h1>
     <hr>
     <h4>Terrific Travel at Tremendous Discounts</h4>
-    <img class="feature-image" src="lights.jpg" alt="Northern Lights aka Aurora">
+    <div id="picture-container">
+        <img class="feature-image" src="lights.jpg" alt="Northern Lights aka Aurora">
+    </div>
     <a href="https://www.space.com/15139-northern-lights-auroras-earth-facts-sdcmp.html">More info on The Northen Lights</a>
     <p id="motivation">Our Travel Agents will get you where you want to go, when you want to go, for the price you want to pay!</p>
     <h5>Things less cool than Aurora Borealis</h5>
